# doom-rust-port

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.claude/: settings.json
.claude/agents/: c-analyst.md  doc-writer.md  rust-architect.md  rust-reviewer.md
.claude/commands/: analyze-module.md  doc-module.md  port-module.md  progress.md
.claude/skills/didactic-code/: SKILL.md
.claude/skills/doom-conventions/: SKILL.md
.claude/skills/rust-patterns/: SKILL.md
docs/: architecture.md  docker-guide.md  glossary.md  license_analysis.md  rust-glossary.md  rust-idiomatic.md  rust-learning-guide.md
prompts/: doom-rust-port-guide.md
src/: args.rs  engine.rs  lib.rs  main.rs
src/game/: display.rs  doors.rs  events.rs  info.rs  input.rs  maputil.rs  mobj.rs  mod.rs  movement.rs  state.rs  thinker.rs  tick.rs  ticker.rs  weapons.rs
src/map/: mod.rs  types.rs
src/menu/: automap.rs  hud.rs  hud_widgets.rs  intermission.rs  mod.rs  navigation.rs  st_widgets.rs  statusbar.rs
src/net/: mod.rs  setup.rs  sync.rs  transport.rs  types.rs
src/renderer/: bsp.rs  data.rs  draw.rs  mod.rs  plane.rs  segs.rs  state.rs  things.rs
src/sound/: mod.rs  music.rs  system.rs  types.rs
src/utils/: angle.rs  bbox.rs  fixed.rs  mod.rs  random.rs  tables.rs
src/video/: mod.rs  sdl.rs
src/wad/: mod.rs
