[package]
name = "doom-rust"
version = "0.1.0"
edition = "2021"
description = "Port educacional do DOOM (1993) para Rust"

[features]
default = []
sdl = ["sdl2"]

[dependencies]
sdl2 = { version = "0.37", features = ["mixer"], optional = true }
bitflags = "2"
byteorder = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
assert_matches = "1"
